# Launcher-NX

./: CMakeLists.txt  Makefile  main.cpp
.github/workflows/: main.yml
src/: launcher.cpp  launcher.h  main.cpp
